# payment_assignment

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/config/: settings.py  urls.py  wsgi.py
backend/dev/: .env.dev  data_sample.json  entrypoint.sh
backend/payment/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
backend/tests/: conftest.py  test_api.py  test_db.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: main.js
frontend/src/components/: Cancelled.vue  Item.vue  Order.vue  Success.vue
frontend/src/router/: index.js
